--- a/src/components/LoginBlock/styles.module.css
+++ b/src/components/LoginBlock/styles.module.css
@@ -52,6 +52,7 @@
     color: #0858F7;
     cursor: pointer;
     margin-top: 20px;
+    transition: 0.3s;
 }
 .btn{
     width: 100%;
@@ -68,12 +69,145 @@
     background-color: #1638a4;
 }
 
+.slider{
+    width: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 0 20% 0 5%;
+    box-sizing: border-box;
+    position: relative;
+}
+.sliderImg{
+    width: 600px;
+    height: auto;
+    position: absolute;
+    /*left: 50%;*/
+    /*top: 50%;*/
+    /*transform: translate(-50%, -50%);*/
+    z-index: 1;
+}
+.slideCard{
+    position: absolute;
+    height: 550px;
+    width: 400px;
+    border-radius: 25px;
+    background-color: #0858F7;
+    padding: 80px 30px 50px 30px;
+    box-sizing: border-box;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+.firstCard{
+    z-index: 3;
+    /*transform: rotate(-0.2deg);*/
+}
+.secondCard{
+    height: 500px;
+    width: 300px;
+    z-index: 2;
+    position: relative;
+    left: 125px;
+    transform: rotate(5deg);
+    background-color: #0646C6;
+}
+.thirdCard{
+    height: 450px;
+    width: 250px;
+    z-index: 1;
+    position: absolute;
+    left: 45%;
+    transform: rotate(10deg);
+    background-color: #053594;
+}
+.thirdCard .cardTitle{
+    font-size: 16px;
+}
+.cardImg{
+    width: 100%;
+    height: auto;
+    padding: 30px;
+
+    box-sizing: border-box;
+}
+.cardTextBlock{
+    margin: 50px 0 40px 0;
+}
+.cardNew{
+    color: white;
+    background-color: black;
+    padding: 5px 7px;
+    border-radius: 7px;
+    font-family: "Inter SemiBold";
+    font-size: 12px;
+}
+.cardTitle{
+    font-family: "Inter Bold";
+    font-size: 22px;
+    color: white;
+    transition: 0.3s;
+}
+.buttons{
+    display: flex;
+    align-items: center;
+}
+
+.activeSlideBtn{
+    height: 9px;
+    width: 9px;
+    background-color: white;
+    transition: 0.3s;
+    border-radius: 50%;
+    margin-right: 10px;
+    cursor: pointer;
+    transition: 0.5s;
+}
+
+.slideBtn{
+    margin-right: 10px;
+    cursor: pointer;
+    height: 8px;
+    width: 8px;
+    background-color: rgba(255,255,255, 0.5);
+    border-radius: 50%;
+    transition: 0.5s;
+}
+
+@keyframes hide {
+    from{
+        opacity: 1;
+    }
+    to {
+        opacity: 0;
+    }
+}
+@keyframes show {
+    from{
+        opacity: 0;
+    }
+    to {
+        opacity: 1;
+    }
+}
+
+
 @media screen and (max-width: 767px){
     .form{
         width: 100%;
         padding: 0 10%;
     }
+    .slider{
+        width: 100%;
+        padding: 0 10%;
+        display: none;
+    }
     .title{
         text-align: center;
+    }
+    .container{
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
     }
 }
