sidebar adaptated for mobile

--- a/src/components/SideBar/styles.module.css
+++ b/src/components/SideBar/styles.module.css
@@ -11,6 +11,8 @@
     align-items: center;
     justify-content: space-between;
     box-sizing: border-box;
+    transition: 0.3s;
+    z-index: 10;
 }
 .logoBody{
     width: 100%;
@@ -87,6 +89,7 @@
 
 .itemBodyLink{
     width: 100%;
+    text-decoration: none;
 }
 
 .itemMessage{
@@ -96,4 +99,54 @@
     color: white;
     padding: 10px;
     border-radius: 10px;
+}
+.mobileMenu{
+    display: none;
+}
+.mobileComment{
+    display: none;
+}
+@media screen and (max-width: 767px) {
+    .sideBar{
+        width: 0;
+        overflow: hidden;
+        white-space: nowrap;
+        transition-timing-function: linear;
+    }
+    .mobileMenu{
+        display: block;
+        position: fixed;
+        top: 30px;
+        left: 5%;
+        transition: 0.3s;
+        z-index: 10;
+        transition-timing-function: linear;
+    }
+    .itemLine{
+        display: none;
+    }
+    .itemMessage{
+        display: none;
+    }
+    .itemBody{
+        padding: 15px 10%;
+        justify-content: flex-start;
+    }
+    .itemBody:hover .mobileComment{
+        color: #304DAF;
+        opacity: 1;
+    }
+    .mobileComment{
+        display: block;
+        text-decoration: none;
+        color: #2E2E2E;
+        opacity: 0.4;
+        padding-left: 15px;
+        font-size: 18px;
+        font-family: "Inter SemiBold";
+        transition: 0.3s;
+    }
+    .logo{
+        width: 32px;
+    }
 }
