--- a/src/components/Table/styes.module.css
+++ b/src/components/Table/styes.module.css
@@ -1,6 +1,5 @@
 .container{
     padding: 0;
-    overflow: hidden;
 }
 .title{
     margin: 0;
@@ -19,6 +18,7 @@
 .columnTitle{
     padding: 15px;
     color: #304DAF;
+    white-space: nowrap;
 }
 
 .hr{
@@ -30,20 +30,28 @@
 }
 .td{
     text-align: center;
-    padding: 10px 0;
+    padding: 10px;
+    box-sizing: content-box;
 }
 
 .changeBtn{
     cursor: pointer;
+    white-space: nowrap;
 }
 
 @media screen and (max-width: 767px){
+    .container{
+        overflow: hidden;
+    }
+    .tableBody{
+        overflow: scroll;
+    }
     .table{
         box-sizing: content-box;
         width: auto;
-        overflow: hidden;
+        overflow: scroll;
     }
-    .table tbody {
-        overflow-x: auto;
+    .table * {
+        overflow-x: scroll;
     }
 }
